controller working
