# schemas/schemas.py
@@ -1,14 +1,14 @@
 from flask_marshmallow.fields import fields
 
 from config import ma
-from models.entities import TData
+from models.entities import Data
 from typing import List
 
 
-class TDataSchema(ma.SQLAlchemyAutoSchema):
-    customerId = fields.String(attribute="tdata_id")
+class DataSchema(ma.SQLAlchemyAutoSchema):
+    customerId = fields.String(attribute="data_id")
 
     class Meta:
-        model = TData
+        model = Data
         load_instance = True
-        exclude = ["tdata_id"]
+        exclude = ["data_id"]
