# swagger_server/models/__init__.py
@@ -3,10 +3,10 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.create_t_data_request import CreateTDataRequest
-from swagger_server.models.create_t_data_response import CreateTDataResponse
+from swagger_server.models.create_data_request import CreateDataRequest
+from swagger_server.models.create_data_response import CreateDataResponse
 from swagger_server.models.error_response import ErrorResponse
 from swagger_server.models.error_type_enum import ErrorTypeEnum
-from swagger_server.models.get_t_data_response import GetTDataResponse
-from swagger_server.models.list_t_datas_response import ListTDatasResponse
-from swagger_server.models.update_t_data_request import UpdateTDataRequest
+from swagger_server.models.get_data_response import GetDataResponse
+from swagger_server.models.list_datas_response import ListDatasResponse
+from swagger_server.models.update_data_request import UpdateDataRequest
