# swagger_server/models/create_data_request.py
@@ -10,15 +10,15 @@ import re  # noqa: F401,E501
 from swagger_server import util
 
 
-class CreateTDataRequest(Model):
+class CreateDataRequest(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, vehicle_id: str=None):  # noqa: E501
-        """CreateTDataRequest - a model defined in Swagger
+        """CreateDataRequest - a model defined in Swagger
 
-        :param vehicle_id: The vehicle_id of this CreateTDataRequest.  # noqa: E501
+        :param vehicle_id: The vehicle_id of this CreateDataRequest.  # noqa: E501
         :type vehicle_id: str
         """
         self.swagger_types = {
@@ -31,32 +31,32 @@ class CreateTDataRequest(Model):
         self._vehicle_id = vehicle_id
 
     @classmethod
-    def from_dict(cls, dikt) -> 'CreateTDataRequest':
+    def from_dict(cls, dikt) -> 'CreateDataRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The CreateTDataRequest of this CreateTDataRequest.  # noqa: E501
-        :rtype: CreateTDataRequest
+        :return: The CreateDataRequest of this CreateDataRequest.  # noqa: E501
+        :rtype: CreateDataRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def vehicle_id(self) -> str:
-        """Gets the vehicle_id of this CreateTDataRequest.
+        """Gets the vehicle_id of this CreateDataRequest.
 
 
-        :return: The vehicle_id of this CreateTDataRequest.
+        :return: The vehicle_id of this CreateDataRequest.
         :rtype: str
         """
         return self._vehicle_id
 
     @vehicle_id.setter
     def vehicle_id(self, vehicle_id: str):
-        """Sets the vehicle_id of this CreateTDataRequest.
+        """Sets the vehicle_id of this CreateDataRequest.
 
 
-        :param vehicle_id: The vehicle_id of this CreateTDataRequest.
+        :param vehicle_id: The vehicle_id of this CreateDataRequest.
         :type vehicle_id: str
         """
         if vehicle_id is None:
