# swagger_server/models/create_data_response.py
@@ -10,84 +10,84 @@ import re  # noqa: F401,E501
 from swagger_server import util
 
 
-class CreateTDataResponse(Model):
+class CreateDataResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, tdata_id: str=None, vehicle_id: str=None, data_hora: datetime=None):  # noqa: E501
-        """CreateTDataResponse - a model defined in Swagger
+    def __init__(self, data_id: str=None, vehicle_id: str=None, data_hora: datetime=None):  # noqa: E501
+        """CreateDataResponse - a model defined in Swagger
 
-        :param tdata_id: The tdata_id of this CreateTDataResponse.  # noqa: E501
-        :type tdata_id: str
-        :param vehicle_id: The vehicle_id of this CreateTDataResponse.  # noqa: E501
+        :param data_id: The data_id of this CreateDataResponse.  # noqa: E501
+        :type data_id: str
+        :param vehicle_id: The vehicle_id of this CreateDataResponse.  # noqa: E501
         :type vehicle_id: str
-        :param data_hora: The data_hora of this CreateTDataResponse.  # noqa: E501
+        :param data_hora: The data_hora of this CreateDataResponse.  # noqa: E501
         :type data_hora: datetime
         """
         self.swagger_types = {
-            'tdata_id': str,
+            'data_id': str,
             'vehicle_id': str,
             'data_hora': datetime
         }
 
         self.attribute_map = {
-            'tdata_id': 'tdataId',
+            'data_id': 'dataId',
             'vehicle_id': 'vehicleId',
             'data_hora': 'dataHora'
         }
-        self._tdata_id = tdata_id
+        self._data_id = data_id
         self._vehicle_id = vehicle_id
         self._data_hora = data_hora
 
     @classmethod
-    def from_dict(cls, dikt) -> 'CreateTDataResponse':
+    def from_dict(cls, dikt) -> 'CreateDataResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The CreateTDataResponse of this CreateTDataResponse.  # noqa: E501
-        :rtype: CreateTDataResponse
+        :return: The CreateDataResponse of this CreateDataResponse.  # noqa: E501
+        :rtype: CreateDataResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def tdata_id(self) -> str:
-        """Gets the tdata_id of this CreateTDataResponse.
+    def data_id(self) -> str:
+        """Gets the data_id of this CreateDataResponse.
 
 
-        :return: The tdata_id of this CreateTDataResponse.
+        :return: The data_id of this CreateDataResponse.
         :rtype: str
         """
-        return self._tdata_id
+        return self._data_id
 
-    @tdata_id.setter
-    def tdata_id(self, tdata_id: str):
-        """Sets the tdata_id of this CreateTDataResponse.
+    @data_id.setter
+    def data_id(self, data_id: str):
+        """Sets the data_id of this CreateDataResponse.
 
 
-        :param tdata_id: The tdata_id of this CreateTDataResponse.
-        :type tdata_id: str
+        :param data_id: The data_id of this CreateDataResponse.
+        :type data_id: str
         """
 
-        self._tdata_id = tdata_id
+        self._data_id = data_id
 
     @property
     def vehicle_id(self) -> str:
-        """Gets the vehicle_id of this CreateTDataResponse.
+        """Gets the vehicle_id of this CreateDataResponse.
 
 
-        :return: The vehicle_id of this CreateTDataResponse.
+        :return: The vehicle_id of this CreateDataResponse.
         :rtype: str
         """
         return self._vehicle_id
 
     @vehicle_id.setter
     def vehicle_id(self, vehicle_id: str):
-        """Sets the vehicle_id of this CreateTDataResponse.
+        """Sets the vehicle_id of this CreateDataResponse.
 
 
-        :param vehicle_id: The vehicle_id of this CreateTDataResponse.
+        :param vehicle_id: The vehicle_id of this CreateDataResponse.
         :type vehicle_id: str
         """
         if vehicle_id is None:
@@ -97,22 +97,22 @@ class CreateTDataResponse(Model):
 
     @property
     def data_hora(self) -> datetime:
-        """Gets the data_hora of this CreateTDataResponse.
+        """Gets the data_hora of this CreateDataResponse.
 
         Data hora  # noqa: E501
 
-        :return: The data_hora of this CreateTDataResponse.
+        :return: The data_hora of this CreateDataResponse.
         :rtype: datetime
         """
         return self._data_hora
 
     @data_hora.setter
     def data_hora(self, data_hora: datetime):
-        """Sets the data_hora of this CreateTDataResponse.
+        """Sets the data_hora of this CreateDataResponse.
 
         Data hora  # noqa: E501
 
-        :param data_hora: The data_hora of this CreateTDataResponse.
+        :param data_hora: The data_hora of this CreateDataResponse.
         :type data_hora: datetime
         """
         if data_hora is None:
