# swagger_server/models/get_data_response.py
@@ -1,0 +1,93 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+import re  # noqa: F401,E501
+from swagger_server import util
+
+
+class GetDataResponse(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, data_id: str=None, vehicle_id: str=None):  # noqa: E501
+        """GetDataResponse - a model defined in Swagger
+
+        :param data_id: The data_id of this GetDataResponse.  # noqa: E501
+        :type data_id: str
+        :param vehicle_id: The vehicle_id of this GetDataResponse.  # noqa: E501
+        :type vehicle_id: str
+        """
+        self.swagger_types = {
+            'data_id': str,
+            'vehicle_id': str
+        }
+
+        self.attribute_map = {
+            'data_id': 'dataId',
+            'vehicle_id': 'vehicleId'
+        }
+        self._data_id = data_id
+        self._vehicle_id = vehicle_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetDataResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetDataResponse of this GetDataResponse.  # noqa: E501
+        :rtype: GetDataResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data_id(self) -> str:
+        """Gets the data_id of this GetDataResponse.
+
+
+        :return: The data_id of this GetDataResponse.
+        :rtype: str
+        """
+        return self._data_id
+
+    @data_id.setter
+    def data_id(self, data_id: str):
+        """Sets the data_id of this GetDataResponse.
+
+
+        :param data_id: The data_id of this GetDataResponse.
+        :type data_id: str
+        """
+        if data_id is None:
+            raise ValueError("Invalid value for `data_id`, must not be `None`")  # noqa: E501
+
+        self._data_id = data_id
+
+    @property
+    def vehicle_id(self) -> str:
+        """Gets the vehicle_id of this GetDataResponse.
+
+
+        :return: The vehicle_id of this GetDataResponse.
+        :rtype: str
+        """
+        return self._vehicle_id
+
+    @vehicle_id.setter
+    def vehicle_id(self, vehicle_id: str):
+        """Sets the vehicle_id of this GetDataResponse.
+
+
+        :param vehicle_id: The vehicle_id of this GetDataResponse.
+        :type vehicle_id: str
+        """
+        if vehicle_id is None:
+            raise ValueError("Invalid value for `vehicle_id`, must not be `None`")  # noqa: E501
+
+        self._vehicle_id = vehicle_id
