# swagger_server/models/list_datas_response.py
@@ -6,25 +6,25 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
-from swagger_server.models.get_t_data_response import GetTDataResponse  # noqa: F401,E501
+from swagger_server.models.get_data_response import GetDataResponse  # noqa: F401,E501
 from swagger_server import util
 
 
-class ListTDatasResponse(Model):
+class ListDatasResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, content: List[GetTDataResponse]=None, total_results: int=None):  # noqa: E501
-        """ListTDatasResponse - a model defined in Swagger
+    def __init__(self, content: List[GetDataResponse]=None, total_results: int=None):  # noqa: E501
+        """ListDatasResponse - a model defined in Swagger
 
-        :param content: The content of this ListTDatasResponse.  # noqa: E501
-        :type content: List[GetTDataResponse]
-        :param total_results: The total_results of this ListTDatasResponse.  # noqa: E501
+        :param content: The content of this ListDatasResponse.  # noqa: E501
+        :type content: List[GetDataResponse]
+        :param total_results: The total_results of this ListDatasResponse.  # noqa: E501
         :type total_results: int
         """
         self.swagger_types = {
-            'content': List[GetTDataResponse],
+            'content': List[GetDataResponse],
             'total_results': int
         }
 
@@ -36,35 +36,35 @@ class ListTDatasResponse(Model):
         self._total_results = total_results
 
     @classmethod
-    def from_dict(cls, dikt) -> 'ListTDatasResponse':
+    def from_dict(cls, dikt) -> 'ListDatasResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The ListTDatasResponse of this ListTDatasResponse.  # noqa: E501
-        :rtype: ListTDatasResponse
+        :return: The ListDatasResponse of this ListDatasResponse.  # noqa: E501
+        :rtype: ListDatasResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def content(self) -> List[GetTDataResponse]:
-        """Gets the content of this ListTDatasResponse.
+    def content(self) -> List[GetDataResponse]:
+        """Gets the content of this ListDatasResponse.
 
         list of paged items  # noqa: E501
 
-        :return: The content of this ListTDatasResponse.
-        :rtype: List[GetTDataResponse]
+        :return: The content of this ListDatasResponse.
+        :rtype: List[GetDataResponse]
         """
         return self._content
 
     @content.setter
-    def content(self, content: List[GetTDataResponse]):
-        """Sets the content of this ListTDatasResponse.
+    def content(self, content: List[GetDataResponse]):
+        """Sets the content of this ListDatasResponse.
 
         list of paged items  # noqa: E501
 
-        :param content: The content of this ListTDatasResponse.
-        :type content: List[GetTDataResponse]
+        :param content: The content of this ListDatasResponse.
+        :type content: List[GetDataResponse]
         """
         if content is None:
             raise ValueError("Invalid value for `content`, must not be `None`")  # noqa: E501
@@ -73,22 +73,22 @@ class ListTDatasResponse(Model):
 
     @property
     def total_results(self) -> int:
-        """Gets the total_results of this ListTDatasResponse.
+        """Gets the total_results of this ListDatasResponse.
 
         total number of records  # noqa: E501
 
-        :return: The total_results of this ListTDatasResponse.
+        :return: The total_results of this ListDatasResponse.
         :rtype: int
         """
         return self._total_results
 
     @total_results.setter
     def total_results(self, total_results: int):
-        """Sets the total_results of this ListTDatasResponse.
+        """Sets the total_results of this ListDatasResponse.
 
         total number of records  # noqa: E501
 
-        :param total_results: The total_results of this ListTDatasResponse.
+        :param total_results: The total_results of this ListDatasResponse.
         :type total_results: int
         """
         if total_results is None:
