# swagger_server/models/update_data_request.py
@@ -10,17 +10,17 @@ import re  # noqa: F401,E501
 from swagger_server import util
 
 
-class UpdateTDataRequest(Model):
+class UpdateDataRequest(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, vehicle_id: str=None, data_hora: datetime=None):  # noqa: E501
-        """UpdateTDataRequest - a model defined in Swagger
+        """UpdateDataRequest - a model defined in Swagger
 
-        :param vehicle_id: The vehicle_id of this UpdateTDataRequest.  # noqa: E501
+        :param vehicle_id: The vehicle_id of this UpdateDataRequest.  # noqa: E501
         :type vehicle_id: str
-        :param data_hora: The data_hora of this UpdateTDataRequest.  # noqa: E501
+        :param data_hora: The data_hora of this UpdateDataRequest.  # noqa: E501
         :type data_hora: datetime
         """
         self.swagger_types = {
@@ -36,32 +36,32 @@ class UpdateTDataRequest(Model):
         self._data_hora = data_hora
 
     @classmethod
-    def from_dict(cls, dikt) -> 'UpdateTDataRequest':
+    def from_dict(cls, dikt) -> 'UpdateDataRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The UpdateTDataRequest of this UpdateTDataRequest.  # noqa: E501
-        :rtype: UpdateTDataRequest
+        :return: The UpdateDataRequest of this UpdateDataRequest.  # noqa: E501
+        :rtype: UpdateDataRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def vehicle_id(self) -> str:
-        """Gets the vehicle_id of this UpdateTDataRequest.
+        """Gets the vehicle_id of this UpdateDataRequest.
 
 
-        :return: The vehicle_id of this UpdateTDataRequest.
+        :return: The vehicle_id of this UpdateDataRequest.
         :rtype: str
         """
         return self._vehicle_id
 
     @vehicle_id.setter
     def vehicle_id(self, vehicle_id: str):
-        """Sets the vehicle_id of this UpdateTDataRequest.
+        """Sets the vehicle_id of this UpdateDataRequest.
 
 
-        :param vehicle_id: The vehicle_id of this UpdateTDataRequest.
+        :param vehicle_id: The vehicle_id of this UpdateDataRequest.
         :type vehicle_id: str
         """
 
@@ -69,22 +69,22 @@ class UpdateTDataRequest(Model):
 
     @property
     def data_hora(self) -> datetime:
-        """Gets the data_hora of this UpdateTDataRequest.
+        """Gets the data_hora of this UpdateDataRequest.
 
         Data hora  # noqa: E501
 
-        :return: The data_hora of this UpdateTDataRequest.
+        :return: The data_hora of this UpdateDataRequest.
         :rtype: datetime
         """
         return self._data_hora
 
     @data_hora.setter
     def data_hora(self, data_hora: datetime):
-        """Sets the data_hora of this UpdateTDataRequest.
+        """Sets the data_hora of this UpdateDataRequest.
 
         Data hora  # noqa: E501
 
-        :param data_hora: The data_hora of this UpdateTDataRequest.
+        :param data_hora: The data_hora of this UpdateDataRequest.
         :type data_hora: datetime
         """
 
